--- a/client/app/account/settings/pets/add/new.pet.html
+++ b/client/app/account/settings/pets/add/new.pet.html
@@ -18,7 +18,7 @@
       <input type="text" id="breed" name="breed" class="form-control" ng-model="addPet.tempPet.breed"/>
 
       <label for="weight">Weight in lbs</label>
-      <input type="text" id="weight" name="weight" class="form-control" ng-model="addPet.tempPet.weight"/>
+      <input type="text" id="weight" name="weight" class="form-control" ng-model="addPet.tempPet.weightLbs"/>
 
       <br/>
       <br/>
