--- a/client/app/account/settings/vehicle/add/new.vehicle.html
+++ b/client/app/account/settings/vehicle/add/new.vehicle.html
@@ -15,7 +15,7 @@
       <input type="text" id="year" name="year" class="form-control" ng-model="newVehicle.tempVehicle.year"/>
 
       <label for="license">License plate</label>
-      <input type="text" id="license" name="license" class="form-control" ng-model="newVehicle.tempVehicle.license"/>
+      <input type="text" id="license" name="license" class="form-control" ng-model="newVehicle.tempVehicle.licensePlate"/>
 
       <label for="color">Color</label>
       <input type="text" id="color" name="color" class="form-control" ng-model="newVehicle.tempVehicle.color"/>
