--- a/client/app/account/settings/address/add/new.address.html
+++ b/client/app/account/settings/address/add/new.address.html
@@ -5,13 +5,13 @@
     </div>
 
     <label for="streetAddress">Address</label>
-    <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="newAddress.address.streetAddress" ng-model="newAddress.address.streetAddress.street"/>
+    <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="newAddress.address.streetAddress" ng-model="newAddress.address.streetAddress.streetAddress"/>
 
     <label for="streetNumber">Number</label>
-    <input type="text" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="newAddress.address.streetAddress.number"/>
+    <input type="text" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="newAddress.address.streetAddress.streetNumeric"/>
 
     <label for="country">Country</label>
-    <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="newAddress.address.streetAddress.country_short"/>
+    <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="newAddress.address.streetAddress.state"/>
 
     <label for="city">City</label>
     <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="newAddress.address.streetAddress.city"/>
@@ -27,13 +27,13 @@
     <label class="radio-inline"><input type="radio" name="present"  ng-model="newAddress.address.streetAddress.present" value="0">No</label><br/><br/>
 
     <label for="about">About me</label>
-    <textarea name="about" id="about" cols="30" rows="5" placeholder="about me" data-ng-model="newAddress.address.about"  class="form-control" ></textarea>
+    <textarea name="about" id="about" cols="30" rows="5" placeholder="about me" data-ng-model="newAddress.address.streetAddress.about"  class="form-control" ></textarea>
 
     <div class="row">
       <div class="col-md-6">
           <label for="start">Start date</label>
         <p class="input-group">
-          <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="newAddress.address.startDate" is-open="datePickers.startDate" close-text="Close" />
+          <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="newAddress.address.streetAddress.startDate" is-open="datePickers.startDate" close-text="Close" />
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
@@ -42,14 +42,14 @@
       <div class="col-md-6">
           <label for="end">End date</label>
         <p class="input-group">
-          <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="newAddress.address.endDate" is-open="datePickers.endDate"  close-text="Close" />
+          <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="newAddress.address.streetAddress.endDate" is-open="datePickers.endDate"  close-text="Close" />
               <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
         </p>
       </div>
     </div>
-      <button class="btn btn-primary" ng-click="newAddress.addNewAddress(newAddress.address)">Add new address</button>
+      <button class="btn btn-primary" ng-click="newAddress.addNewAddress(newAddress.address.streetAddress)">Add new address</button>
       <button class="btn btn-primary" ui-sref="^">Back to address overview</button>
 
 
