addind user finance information views and get post put delete backend routes

--- a/client/app/account/settings/education/add/new.education.html
+++ b/client/app/account/settings/education/add/new.education.html
@@ -64,7 +64,7 @@
       <br/>
 
       <button class="btn btn-primary" ng-click="addEducation.addNewEducation(addEducation.tempEducation)">Add</button>
-      <button class="btn btn-primary" ui-sref="settings.education">Back to education overview</button>
+      <button class="btn btn-primary" ui-sref="^">Back to education overview</button>
 
       <pre>{{addEducation.tempEducation|json}}</pre>
   </div>
