--- a/client/index.html
+++ b/client/index.html
@@ -107,6 +107,10 @@
           <script src="app/account/settings/education/edit/edit.education.route.js"></script>
           <script src="app/account/settings/education/education.controller.js"></script>
           <script src="app/account/settings/education/education.route.js"></script>
+          <script src="app/account/settings/finance/add/new.finance.controller.js"></script>
+          <script src="app/account/settings/finance/add/new.finance.route.js"></script>
+          <script src="app/account/settings/finance/edit/edit.finance.controller.js"></script>
+          <script src="app/account/settings/finance/edit/edit.finance.route.js"></script>
           <script src="app/account/settings/finance/finance.controller.js"></script>
           <script src="app/account/settings/finance/finance.route.js"></script>
           <script src="app/account/settings/occupation/occupation.controller.js"></script>
@@ -145,6 +149,7 @@
           <script src="components/core/data/address.js"></script>
           <script src="components/core/data/dataservice.js"></script>
           <script src="components/core/data/education.js"></script>
+          <script src="components/core/data/finance.js"></script>
           <script src="components/core/data/local.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
