adding user occupation information views and get post put delete backAPI's

--- a/client/app/account/settings/finance/add/new.finance.html
+++ b/client/app/account/settings/finance/add/new.finance.html
@@ -39,7 +39,7 @@
       <br/>
 
       <button class="btn btn-primary" ng-click="addFinance.addNewFinance(addFinance.tempFinance)">Add</button>
-      <button class="btn btn-primary" ui-sref="^">Back to education overview</button>
+      <button class="btn btn-primary" ui-sref="^">Back to finance overview</button>
 
       <pre>{{addFinance.tempFinance|json}}</pre>
     </div>
