--- a/client/index.html
+++ b/client/index.html
@@ -113,6 +113,10 @@
           <script src="app/account/settings/finance/edit/edit.finance.route.js"></script>
           <script src="app/account/settings/finance/finance.controller.js"></script>
           <script src="app/account/settings/finance/finance.route.js"></script>
+          <script src="app/account/settings/occupation/add/new.occupation.controller.js"></script>
+          <script src="app/account/settings/occupation/add/new.occupation.route.js"></script>
+          <script src="app/account/settings/occupation/edit/edit.occupation.controller.js"></script>
+          <script src="app/account/settings/occupation/edit/edit.occupation.route.js"></script>
           <script src="app/account/settings/occupation/occupation.controller.js"></script>
           <script src="app/account/settings/occupation/occupation.route.js"></script>
           <script src="app/account/settings/password/password.controller.js"></script>
@@ -151,6 +155,7 @@
           <script src="components/core/data/education.js"></script>
           <script src="components/core/data/finance.js"></script>
           <script src="components/core/data/local.js"></script>
+          <script src="components/core/data/occupation.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
           <script src="components/core/data/vehicle.js"></script>
