--- a/client/app/account/settings/occupation/occupation.html
+++ b/client/app/account/settings/occupation/occupation.html
@@ -17,8 +17,8 @@
       <td>{{$index+1}}</td>
       <td>{{item.company}}</td>
       <td>{{item.role}}</td>
-      <td>{{item.start}}</td>
-      <td>{{item.end}}</td>
+      <td>{{item.start | date: 'dd.MM.yyyy'}}</td>
+      <td>{{item.end | date: 'dd.MM.yyyy'}}</td>
       <td>{{item.presentlyEmployeed}}</td>
       <td>
         <div class="btnContainter ">
