adding vehicle get delete put backend API's

--- a/client/index.html
+++ b/client/index.html
@@ -133,6 +133,8 @@
           <script src="app/account/settings/user_info/user.info.route.js"></script>
           <script src="app/account/settings/vehicle/add/new.vehicle.controller.js"></script>
           <script src="app/account/settings/vehicle/add/new.vehicle.route.js"></script>
+          <script src="app/account/settings/vehicle/edit/edit.vehicle.controller.js"></script>
+          <script src="app/account/settings/vehicle/edit/edit.vehicle.route.js"></script>
           <script src="app/account/settings/vehicle/vehicle.controller.js"></script>
           <script src="app/account/settings/vehicle/vehicle.route.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
