--- a/client/app/account/settings/vehicle/vehicles.html
+++ b/client/app/account/settings/vehicle/vehicles.html
@@ -1,7 +1,34 @@
 
-<div ui-view="">
-  Information about vehicles <br/>
-  Table preview <br/>
-  links to edit vehicles <br/>
-  <button class="btn btn-primary" ui-sref=".new">Add new vehicle</button>
-</div>
+  <div ui-view="">
+    <table class="table table-bordered table-condensed">
+      <thead>
+      <tr>
+        <th>No.</th>
+        <th>Model</th>
+        <th>Make</th>
+        <th>Year</th>
+        <th>Color</th>
+        <th>License plate</th>
+        <th>Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="item in vehicle.listOfVehicles track by $index">
+        <td>{{$index+1}}</td>
+        <td>{{item.model}}</td>
+        <td>{{item.make}}</td>
+        <td>{{item.year}}</td>
+        <td>{{item.licensePlate}}</td>
+        <td>{{item.color}}</td>
+        <td>
+          <div class="btnContainter ">
+            <button ui-sref=".edit({id: item.id})" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-edit"></i>Edit</button>
+            <button ng-click="vehicle.deleteVehicle(item)" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-trash"></i>Delete</button>
+          </div>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+
+    <button class="btn btn-primary" ui-sref=".new">Add</button>
+  </div>
