added separate edit personal info view

--- a/client/index.html
+++ b/client/index.html
@@ -129,6 +129,8 @@
           <script src="app/account/settings/pets/pet.route.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/settings/settings.route.js"></script>
+          <script src="app/account/settings/user_info/edit/edit.info.controller.js"></script>
+          <script src="app/account/settings/user_info/edit/edit.info.route.js"></script>
           <script src="app/account/settings/user_info/user.info.controller.js"></script>
           <script src="app/account/settings/user_info/user.info.route.js"></script>
           <script src="app/account/settings/vehicle/add/new.vehicle.controller.js"></script>
