--- a/client/app/account/settings/user_info/user.info.html
+++ b/client/app/account/settings/user_info/user.info.html
@@ -1,49 +1,93 @@
+<div ui-view="">
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Change user's information</h1>
+      <h1>User's information</h1>
     </div>
+
+      <img class="img-circle" ng-if="info.me.userImage" ng-src="/api/images{{info.me.userImage}}" style="height: 80px"/>
+      <img class="img-circle" ng-if="!info.me.userImage" ng-src="http://images.sodahead.com/polls/003831759/331109413_question_mark_face_answer_5_xlarge.jpeg" style="height: 80px"/>
+
     <div class="col-sm-12">
 <div class="row">
-  <div class="col-sm-2">
-    <img class="img-circle" ng-if="info.me.userImage" ng-src="/api/images{{info.me.userImage}}" style="height: 80px"/>
-    <img class="img-circle" ng-if="!info.me.userImage" ng-src="http://images.sodahead.com/polls/003831759/331109413_question_mark_face_answer_5_xlarge.jpeg" style="height: 80px"/>
 
-    <input type="file" nv-file-select uploader="info.uploader" id="fileUpload" /><br/>
-    <ul>
-      <li ng-repeat="item in info.uploader.queue">
-        Name: <span ng-bind="item.file.name"></span><br/>
-        <button ng-click="item.upload()">upload</button>
-      </li>
-    </ul>
+  <div class="col-sm-6">
+
+<div class="row">
+  <div class="form-group">
+      <label for="name" class="col-sm-3 control-label">Name:</label>
+       <div id="name" class="col-sm-4">{{info.me.firstname}}</div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="form-group">
+      <label for="lastname" class="col-sm-3 control-label">Last name:</label>
+      <div id="lastname" class="col-sm-4">{{info.me.lastname}}</div>
+    </div>
+</div>
+
+<div class="row">
+  <div class="form-group">
+    <label for="username" class="col-sm-3 control-label">Username:</label>
+    <div id="username" class="col-sm-4">{{info.me.username}}</div>
   </div>
-  <div class="col-sm-10">
-          <label for="firstname">Name</label>
-          <input type="text" id="firstname" name="firstname" class="form-control" ng-model="info.tempMe.firstname"/>
+</div>
 
-          <label for="lastname">Last name</label>
-          <input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.tempMe.lastname"/>
+<div class="row">
+  <div class="form-group">
+    <label for="middlename" class="col-sm-3 control-label">Middle name:</label>
+    <div id="middlename" class="col-sm-4">{{info.me.middlename}}</div>
   </div>
+</div>
+
+<div class="row">
+  <div class="form-group">
+    <label for="email" class="col-sm-3 control-label">Email:</label>
+    <div id="email" class="col-sm-4">{{info.me.email}}</div>
   </div>
-          <label for="username">User name</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="info.tempMe.username "/>
+</div>
 
-          <label for="middlename">Middle name</label>
-          <input type="text" id="middlename" name="middlename" class="form-control" ng-model="info.tempMe.middlename"/>
+<div class="row">
+  <div class="form-group">
+    <label for="phone" class="col-sm-3 control-label">Phone:</label>
+    <div id="phone" class="col-sm-4">{{info.me.phone}}</div>
+  </div>
+</div>
 
-         <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" ng-model="info.tempMe.email"/>
+    <!--name: {{info.tempMe.firstname}}-->
+    <!--lastname: {{info.tempMe.lastname}}-->
+    <!--username: {{info.tempMe.username}}-->
+    <!--middlename: {{info.tempMe.middlename}}-->
+    <!--email: {{info.tempMe.email}}-->
+    <!--phone: {{info.tempMe.phone}}-->
 
-         <label for="phone">Phone number:</label>
-          <input type="text" id="phone" name="phone" class="form-control" ui-mask="999-999-9999" ng-model="info.tempMe.phone"/>
-      <br/>
-      <br/>
-      <button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save changes</button>
+
+          <!--<label for="firstname">Name</label>-->
+          <!--<input type="text" id="firstname" name="firstname" class="form-control" ng-model="info.tempMe.firstname"/>-->
+
+          <!--<label for="lastname">Last name</label>-->
+          <!--<input type="text" id="lastname" name="lastname" class="form-control" ng-model="info.tempMe.lastname"/>-->
+  <!--</div>-->
+  <!--</div>-->
+          <!--<label for="username">User name</label>-->
+          <!--<input type="text" id="username" name="username" class="form-control" ng-model="info.tempMe.username"/>-->
+
+          <!--<label for="middlename">Middle name</label>-->
+          <!--<input type="text" id="middlename" name="middlename" class="form-control" ng-model="info.tempMe.middlename"/>-->
+
+         <!--<label for="email">Email</label>-->
+          <!--<input type="email" id="email" name="email" class="form-control" ng-model="info.tempMe.email"/>-->
+
+         <!--<label for="phone">Phone number:</label>-->
+          <!--<input type="text" id="phone" name="phone" class="form-control" ui-mask="999-999-9999" ng-model="info.tempMe.phone"/>-->
+      <!--<br/>-->
+      <!--<br/>-->
+      <button class="btn btn-primary" ui-sref=".edit">Edit info</button>
+      <!--<button class="btn btn-primary" ng-click="info.saveUserInfo(info.tempMe)">Save changes</button>-->
     </div>
   </div>
 
-
-
-
-
 </div>
+</div>
+  </div>
