adding angular-progress

--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -2,13 +2,13 @@
 
 <div class="container">
 <button class="btn btn-primary" ui-sref=".password">Change password</button>
-<button class="btn btn-primary" ui-sref=".userInfo">Edit user info</button>
+<button class="btn btn-primary" ui-sref=".userInfo">Manage user info</button>
 <button class="btn btn-primary" ui-sref=".vehicle">Manage vehicles</button>
 <button class="btn btn-primary" ui-sref=".address">Manage addresses</button>
 <button class="btn btn-primary" ui-sref=".pets">Manage pets</button>
-<button class="btn btn-primary" ui-sref=".education">Your education</button>
-<button class="btn btn-primary" ui-sref=".occupation">Your occupations</button>
-<button class="btn btn-primary" ui-sref=".finance">Your finances</button>
+<button class="btn btn-primary" ui-sref=".education">Manage education</button>
+<button class="btn btn-primary" ui-sref=".occupation">Manage occupations</button>
+<button class="btn btn-primary" ui-sref=".finance">Manage finances</button>
 </div>
 
 <div ui-view class="container"></div>
