--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
       <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
       <script src="bower_components/angular-busy/dist/angular-busy.js"></script>
       <script src="bower_components/ngstorage/ngStorage.js"></script>
+      <script src="bower_components/angular-progress-arc/angular-progress-arc.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
