--- a/client/app/account/settings/address/add/new.address.html
+++ b/client/app/account/settings/address/add/new.address.html
@@ -17,7 +17,7 @@
     <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="newAddress.address.streetAddress.city"/>
 
     <label for="zip">Zip code</label>
-    <input type="text" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="newAddress.address.streetAddress.zip"/>
+    <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="newAddress.address.streetAddress.zip"/>
 
     <label for="apt">Apt</label>
     <input type="text" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="newAddress.address.streetAddress.apt"/><br/>
