--- a/client/app/account/settings/address/add/new.address.html
+++ b/client/app/account/settings/address/add/new.address.html
@@ -8,7 +8,7 @@
     <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="newAddress.address.streetAddress" ng-model="newAddress.address.streetAddress.streetAddress"/>
 
     <label for="streetNumber">Number</label>
-    <input type="text" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="newAddress.address.streetAddress.streetNumeric"/>
+    <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="newAddress.address.streetAddress.streetNumeric"/>
 
     <label for="country">Country</label>
     <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="newAddress.address.streetAddress.state"/>
