adding state mgmt for landing page

--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="components/layout/layout.module.js"></script>
           <script src="app/account/account.module.js"></script>
           <script src="app/dashboard/dashboard.module.js"></script>
+          <script src="app/landing/landing.module.js"></script>
 
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
@@ -148,6 +149,8 @@
           <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
           <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
           <script src="app/dashboard/my-properties/my.property.route.js"></script>
+          <script src="app/landing/landing.controller.js"></script>
+          <script src="app/landing/valuedetails.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/prerender.controller.js"></script>
