commited before pull

--- a/client/app/dashboard/my-properties/add.new.property/add.new.property.html
+++ b/client/app/dashboard/my-properties/add.new.property/add.new.property.html
@@ -72,6 +72,7 @@
       </ul>
       <br/>
       <button class="btn btn-primary" ng-click="addNew.addNewProperty(addNew.property.streetAddress)">Save new property</button>
+      <button class="btn btn-primary" ui-sref="^">Back to my properties</button>
 
     </div>
 
