--- a/client/app/dashboard/my-properties/my.properties.html
+++ b/client/app/dashboard/my-properties/my.properties.html
@@ -1,13 +1,9 @@
-<div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div class="container">
-<a class="btn btn-primary" ui-sref=".addNew">Add new property</a>
-<br/>
+  <br/>
 
 <div ui-view="" >
   some user property <br/>
-  some user property info <br/>
-  some user property info <br/>
-  some user property info
-
+  some user property infobr <br/>
+  <a class="btn btn-primary" ui-sref=".addNew">Add new property</a>
 </div>
 </div>
