--- a/client/index.html
+++ b/client/index.html
@@ -144,6 +144,14 @@
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
+          <script src="app/dashboard/my-profile/my.profile.route.js"></script>
+          <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
+          <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
+          <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
+          <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
+          <script src="app/dashboard/my-profile/step3/step3.controller.js"></script>
+          <script src="app/dashboard/my-profile/step3/step3.route.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.property.controller.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
           <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
