--- a/client/app/dashboard/my-profile/step2/step2.html
+++ b/client/app/dashboard/my-profile/step2/step2.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">-->
   <div class="row">
     <div class="col-sm-12">
 
@@ -23,9 +23,6 @@
 
       </div>
 </div>
-    <!--<div class="row">-->
-      <!--<button class="btn btn-primary pull-left" ng-click="step2.previous()">< Previous</button>-->
-      <!--<button class="btn btn-primary pull-right" ng-click="step2.next()">Next ></button>-->
-    <!--</div>-->
-</div>
+
+<!--</div>-->
 
