--- a/client/app/dashboard/my-profile/step3/step3.html
+++ b/client/app/dashboard/my-profile/step3/step3.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">-->
   <div class="row">
     <div class="col-sm-12">
 
@@ -7,10 +7,6 @@
 
 
       </div>
-</div>
-    <!--<div class="row">-->
-      <!--<button class="btn btn-primary pull-left" ng-click="step3.previous()"> < Previous</button>-->
-      <!--<button class="btn btn-primary pull-right" ng-click=""> Done</button>-->
-    <!--</div>-->
+
 </div>
 </div>
