--- a/client/app/dashboard/my-properties/my.properties.html
+++ b/client/app/dashboard/my-properties/my.properties.html
@@ -2,8 +2,10 @@
   <br/>
 
 <div ui-view="" >
-  some user property <br/>
-  some user property infobr <br/>
+
+KURCINA
+<div class="slider" slider images="images"></div>
+
   <a class="btn btn-primary" ui-sref=".addNew">Add new property</a>
 </div>
 </div>
