--- a/client/index.html
+++ b/client/index.html
@@ -181,6 +181,7 @@
           <script src="components/widgets/modal/modal.service.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/phone-mask/phone.mask.js"></script>
+          <script src="components/widgets/slider/slider.js"></script>
           <script src="components/widgets/widget.config.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
