adding connection favorites and messages frontend views

--- a/client/index.html
+++ b/client/index.html
@@ -144,6 +144,12 @@
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/messages/messages.controller.js"></script>
+          <script src="app/dashboard/messages/messages.route.js"></script>
+          <script src="app/dashboard/my-connections/my.connection.controller.js"></script>
+          <script src="app/dashboard/my-connections/my.connection.route.js"></script>
+          <script src="app/dashboard/my-favorites/my.favorites.controller.js"></script>
+          <script src="app/dashboard/my-favorites/my.favorites.route.js"></script>
           <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
