--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,18 +1,17 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
+
 <div class="container">
-<div class="col-dm-12">
-<tabset class="">
-    <tab ng-repeat="tab in dashboard.tabs" ui-sref="{{tab.sref}}" heading="{{tab.title}}"
-         active="tab.active" disabled="tab.disabled" select="setIndex($index)"></tab>
-  </tabset>
+  <div class="col-md-12">
+    <tabset class="">
+      <tab ng-repeat="tab in dashboard.tabs" ui-sref="{{tab.sref}}" heading="{{tab.title}}"
+      active="tab.active" disabled="tab.disabled" select="setIndex($index)"></tab>
+    </tabset>
 
 
-  <div ui-view="">
+    <div ui-view="">
       <br/>
-<h1>dashboard view</h1>
+      <h1>dashboard view</h1>
 
+    </div>
   </div>
 </div>
-</div>
-
-<div ng-include="'components/layout/footer/footer.html'"></div>
