--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
 
     <!-- Add your site or application content here -->
     <div ui-view=""></div>
+    <div ng-include="'components/layout/footer/footer.html'"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
