--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
       <link rel="stylesheet" href="bower_components/angular-busy/dist/angular-busy.css" />
+      <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -76,6 +77,7 @@
       <script src="bower_components/angular-busy/dist/angular-busy.js"></script>
       <script src="bower_components/ngstorage/ngStorage.js"></script>
       <script src="bower_components/angular-progress-arc/angular-progress-arc.js"></script>
+      <script src="bower_components/toastr/toastr.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -88,6 +90,8 @@
           <script src="app/account/account.module.js"></script>
           <script src="app/dashboard/dashboard.module.js"></script>
           <script src="app/landing/landing.module.js"></script>
+          <script src="components/blocks/logger/logger.module.js"></script>
+          <script src="components/blocks/exception/exception.module.js"></script>
 
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
@@ -154,7 +158,6 @@
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
-          <script src="app/dashboard/my-profile/step2/step1.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
           <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
           <script src="app/dashboard/my-profile/step3/step3.controller.js"></script>
@@ -167,10 +170,15 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/prerender.controller.js"></script>
+          <script src="components/blocks/exception/exception-handler.js"></script>
+          <script src="components/blocks/exception/exception.js"></script>
+          <script src="components/blocks/logger/logger.js"></script>
           <script src="components/blocks/socket/socket.service.js"></script>
           <script src="components/core/auth/auth.service.js"></script>
           <script src="components/core/auth/user.service.js"></script>
           <script src="components/core/common.js"></script>
+          <script src="components/core/config.js"></script>
+          <script src="components/core/constants.js"></script>
           <script src="components/core/data/address.js"></script>
           <script src="components/core/data/dataservice.js"></script>
           <script src="components/core/data/education.js"></script>
